# Flask-Demo

./: README.md  jenkinsfile  setup.cfg  setup.py  test.txt
applications/: hello-world.sh  hello-world.yaml
applications/hello-world/: hello-world.sh  hello-world.yaml
blueprints/: hello-world.yaml  sample-api-aws.yaml
requirements/: requirements.txt
