[metadata]
name = sample-api
version = 0
author = rajeev
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/hello-world

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hello-world
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hello-world